update coverage screenshots

--- a/P1.md
+++ b/P1.md
@@ -57,10 +57,15 @@ We define one success test, one unsuccess test, and tests for invalid input. The
 
 The screenshot includes the test coverage results associated with the new/changed entities:
 
-![Test Coverage Screenshot Suggestion and Suggestion Answer](https://user-images.githubusercontent.com/5447088/76559456-20b82600-6497-11ea-82f7-edc0fa6eb818.png)
-![Test Coverage Screenshot Suggestion and Suggestion Answer Domain](https://user-images.githubusercontent.com/24615237/76527213-c30be580-6466-11ea-856f-70762f5eea3e.png)
-![Test Coverage Screenshot Question](https://user-images.githubusercontent.com/24615237/76529627-71655a00-646a-11ea-8406-7c31794391f9.png)
-![Test Coverage Screenshot User](https://user-images.githubusercontent.com/24615237/76529686-880bb100-646a-11ea-917b-076bf76e318d.png)
+![image](https://user-images.githubusercontent.com/5447088/76632729-94137380-653b-11ea-8021-466107a36691.png)
+
+![image](https://user-images.githubusercontent.com/5447088/76632751-9a095480-653b-11ea-8af5-7fa3dcf7bbb0.png)
+
+![image](https://user-images.githubusercontent.com/5447088/76632779-a1306280-653b-11ea-8899-7b6d196d3406.png)
+
+![image](https://user-images.githubusercontent.com/5447088/76632839-bd340400-653b-11ea-8833-a52528164a29.png)
+
+![image](https://user-images.githubusercontent.com/5447088/76632866-c8872f80-653b-11ea-8e60-35e9ba9351a1.png)
 
 ---
 
