Missing link on P2 Markdown

--- a/P2.md
+++ b/P2.md
@@ -187,7 +187,7 @@ Each subgroup member defined one reading test and one writing test. The direct l
 ![DB Cleanup WSCreateAnswerQueryLoadTest](https://user-images.githubusercontent.com/33233238/77709475-103d9a80-6fc3-11ea-9875-dd6b27fb8d54.PNG)
 
 ![Summary report WSGetQueryLoadTest](https://user-images.githubusercontent.com/33233238/77709542-585cbd00-6fc3-11ea-8602-0e73bac792fb.PNG)
-![DB Cleanup WSGetQueryLoadTest](p2-images/jmeter_load_clean.png)
+![DB Cleanup WSGetQueryLoadTest](https://user-images.githubusercontent.com/33233238/77712425-98c03900-6fcb-11ea-86ff-ce0593dc741c.PNG)
 
 ![Summary report WSGetAnswerQueryLoadTest](https://user-images.githubusercontent.com/33233238/77709614-9823a480-6fc3-11ea-85f3-29e1d6ef15dc.PNG)
 ![DB Cleanup WSGetAnswerQueryLoadTest](https://user-images.githubusercontent.com/33233238/77709613-978b0e00-6fc3-11ea-905c-0fece0b3e20e.PNG)
