Fixed broken image links in markdown file

--- a/P2.md
+++ b/P2.md
@@ -231,15 +231,15 @@ Each subgroup member defined one reading test and one writing test. The direct l
 
  - [WSTestCreateTournamentTest](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/jmeter/tournament/WSTestCreateTournamentTest.jmx)
 
-![Response body](https://gyazo.com/6a26bcd8eb30b6c047464f4126ae7ca5)
-![Summary report](https://gyazo.com/1717ddff0384dcf7977037c54b3ba7f1)
-![DB Cleanup](https://gyazo.com/f5ddb8d6cbd9f5a9438de1858e7a01cc)
+![Response body](https://i.gyazo.com/6a26bcd8eb30b6c047464f4126ae7ca5.png)
+![Summary report](https://i.gyazo.com/1717ddff0384dcf7977037c54b3ba7f1.png)
+![DB Cleanup](https://i.gyazo.com/f5ddb8d6cbd9f5a9438de1858e7a01cc.png)
 
  - [WSTestGetOpenTournamentsTest](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/jmeter/tournament/WSTestGetOpenTournamentsTest.jmx)
 
-![Response body](https://gyazo.com/38c4400218da56e7f6841fb2fd59610c)
-![Summary report](https://gyazo.com/0669b13064c799a35412749bf1dd4b32)
-![DB Cleanup](https://gyazo.com/d2421dc14db68ab73c7845d73df88d1e)
+![Response body](https://i.gyazo.com/38c4400218da56e7f6841fb2fd59610c.png)
+![Summary report](https://i.gyazo.com/0669b13064c799a35412749bf1dd4b32.png)
+![DB Cleanup](https://i.gyazo.com/d2421dc14db68ab73c7845d73df88d1e.png)
 
 
 ### Load testing
@@ -254,13 +254,13 @@ Each subgroup member defined one reading test and one writing test. The direct l
 
  - [WSLoadTestCreateTournamentTest](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/jmeter/tournament/WSLoadTestCreateTournamentTest.jmx)
 
-![Summary report](https://gyazo.com/0cde96801f38665a361d3fffb68c5b5e)
-![DB Cleanup](https://gyazo.com/f0484b017cfad4fc7f45aecdb81b9d77)
+![Summary report](https://i.gyazo.com/0cde96801f38665a361d3fffb68c5b5e.png)
+![DB Cleanup](https://i.gyazo.com/f0484b017cfad4fc7f45aecdb81b9d77.png)
 
  - [WSLoadTestGetOpenTournamentsTest](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/jmeter/tournament/WSLoadTestGetOpenTournamentsTest.jmx)
 
-![Summary report](https://gyazo.com/5e75f22f44be4aba7b6494d42b45c679)
-![DB Cleanup](https://gyazo.com/ba1f6a8ee1fbf566172c21937225a218)
+![Summary report](https://i.gyazo.com/5e75f22f44be4aba7b6494d42b45c679.png)
+![DB Cleanup](https://i.gyazo.com/ba1f6a8ee1fbf566172c21937225a218.png)
 
 ### Service profiling
 
@@ -270,10 +270,10 @@ We used the [Java Flight Recorder](https://www.jetbrains.com/help/idea/java-flig
 
 #### Screenshots of summary reports
 
-![Profiling percentages](https://gyazo.com/ecd27fd7e1e13f381faadef66553b89d)
-![Profiling percentages](https://gyazo.com/3bcf4545d06f673126d2299d48bb53b3)
-![Profiling graphs](https://gyazo.com/dcb6a755da863e7eb04fa931e645648f)
-![Profiling heap](https://gyazo.com/f7c103f898edaabea74cc52d42be4f85)
+![Profiling percentages](https://i.gyazo.com/ecd27fd7e1e13f381faadef66553b89d.png)
+![Profiling percentages](https://i.gyazo.com/3bcf4545d06f673126d2299d48bb53b3.png)
+![Profiling graphs](https://i.gyazo.com/dcb6a755da863e7eb04fa931e645648f.png)
+![Profiling heap](https://i.gyazo.com/f7c103f898edaabea74cc52d42be4f85.png)
 
 
 #### Discussion of findings
