--- a/P3.md
+++ b/P3.md
@@ -8,7 +8,7 @@
     + Issues assigned: [#136](https://github.com/tecnico-softeng/es20al_09-project/issues/136), [#137](https://github.com/tecnico-softeng/es20al_09-project/issues/137), [#142](https://github.com/tecnico-softeng/es20al_09-project/issues/142), [#143](https://github.com/tecnico-softeng/es20al_09-project/issues/143)
   - Daniel Pereira, 89425, DanielPereira890
     + Issues assigned: [#2](https://github.com), [#4](https://github.com)
- 
+
 ### Pull requests associated with this feature
 
 The list of pull requests associated with this feature is:
@@ -43,22 +43,25 @@ TODO: None?
 
 #### Created tests
 
- - [Login creates and deletes a course execution](https://github.com/socialsoftware/quizzes-tutor/blob/6dcf668498be3d6e45c84ebf61e81b931bdc797b/frontend/tests/e2e/specs/admin/manageCourseExecutions.js#L10)
- - [Login creates two course executions and deletes it](https://github.com/socialsoftware/quizzes-tutor/blob/6dcf668498be3d6e45c84ebf61e81b931bdc797b/frontend/tests/e2e/specs/admin/manageCourseExecutions.js#L16)
- - [Login creates FROM a course execution and deletes it](https://github.com/socialsoftware/quizzes-tutor/blob/6dcf668498be3d6e45c84ebf61e81b931bdc797b/frontend/tests/e2e/specs/admin/manageCourseExecutions.js#L30)
+- [Login creates suggestion and deletes it](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/tests/e2e/specs/student/manageSuggestionsByStudent.js#L11)
+- [Login creates two suggestions and deletes them](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/tests/e2e/specs/student/manageSuggestionsByStudent.js#L34)
 
 #### Rationale
-*TODO*: describe in 100 words (max) the relevance of the end-to-end tests defined with respect to the
-common use cases.
+
+- From the student point of view, the tests check if the main functionality of the suggestions is working: from creation to deletion.
+- From the teacher point of view, the tests... TODO
 
 #### Commands defined
 
  - [commands.js](https://github.com/socialsoftware/quizzes-tutor/blob/master/frontend/tests/e2e/support/commands.js)
+  - [demoStudentLogin](https://github.com/tecnico-softeng/es20al_09-project/blob/PpA/frontend/tests/e2e/support/commands.js#L75)
+  - [navigateSuggestions](https://github.com/tecnico-softeng/es20al_09-project/blob/PpA/frontend/tests/e2e/support/commands.js#L80)
+  - [createSuggestion](https://github.com/tecnico-softeng/es20al_09-project/blob/PpA/frontend/tests/e2e/support/commands.js#L84)
+  - [deleteSuggestion](https://github.com/tecnico-softeng/es20al_09-project/blob/PpA/frontend/tests/e2e/support/commands.js#L104)
 
 #### Screenshot of test results overview
 
-![Test results](p3-images/cypress_results.png)
-
+TODO
 
 ---
 
@@ -70,7 +73,7 @@ common use cases.
    + Issues assigned: [#1](https://github.com), [#3](https://github.com)
  - Nome, istID, githubID
    + Issues assigned: [#2](https://github.com), [#4](https://github.com)
- 
+
 ### Pull requests associated with this feature
 
 The list of pull requests associated with this feature is:
@@ -137,7 +140,7 @@ common use cases.
    + Issues assigned: [#1](https://github.com), [#3](https://github.com)
  - Nome, istID, githubID
    + Issues assigned: [#2](https://github.com), [#4](https://github.com)
- 
+
 ### Pull requests associated with this feature
 
 The list of pull requests associated with this feature is:
