--- a/P3.md
+++ b/P3.md
@@ -7,7 +7,7 @@
   - Daniel Pereira, 89425, DanielPereira890
     + Issues assigned: [#136](https://github.com/tecnico-softeng/es20al_09-project/issues/136), [#137](https://github.com/tecnico-softeng/es20al_09-project/issues/137), [#142](https://github.com/tecnico-softeng/es20al_09-project/issues/142), [#143](https://github.com/tecnico-softeng/es20al_09-project/issues/143)
   - Daniel Pereira, 89425, DanielPereira890
-    + Issues assigned: [#2](https://github.com), [#4](https://github.com)
+    + Issues assigned: [#138](https://github.com/tecnico-softeng/es20al_09-project/issues/138), [#139](https://github.com/tecnico-softeng/es20al_09-project/issues/139), [#140](https://github.com/tecnico-softeng/es20al_09-project/issues/140), [#141](https://github.com/tecnico-softeng/es20al_09-project/issues/141)
 
 ### Pull requests associated with this feature
 
@@ -23,11 +23,16 @@ The list of pull requests associated with this feature is:
   - [EditSuggestionDialog](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/src/views/student/suggestions/EditSuggestionDialog.vue)
   - [ShowSuggestion](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/src/views/student/suggestions/ShowSuggestion.vue)
   - [ShowSuggestionList](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/src/views/student/suggestions/ShowSuggestionList.vue)
-
+  - [ShowSuggestionDialog](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/src/views/student/suggestions/ShowSuggestionDialog.vue)
+  - [ShowReviewsDialog](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/src/views/student/suggestions/ShowReviewsDialog.vue)
+  - [AddSuggestionReviewDialog](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/src/views/teacher/suggestions/AddSuggestionReviewDialog.vue)
+  - [SuggestionReviewsView](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/src/views/teacher/suggestions/SuggestionReviewsView.vue)
+  - [TeacherSuggestionsViews](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/src/views/teacher/suggestions/TeacherSuggestionsView.vue)
 
 #### New/Updated Models
 
  - [Suggestion](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/src/models/management/Suggestion.ts)
+ - [SuggestionReview](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/src/models/management/SuggestionReview.ts)
 
 ### Additional services implemented
 
@@ -45,12 +50,12 @@ TODO: None?
 
 - [Login creates suggestion and deletes it](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/tests/e2e/specs/student/manageSuggestionsByStudent.js#L11)
 - [Login creates two suggestions and deletes them](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/tests/e2e/specs/student/manageSuggestionsByStudent.js#L34)
+- [Login creates suggestion, login creates suggestion review, deletes them](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/tests/e2e/specs/student/manageSuggestionReviews.js#L11)
 
 #### Rationale
 
 - From the student point of view, the tests check if the main functionality of the suggestions is working: from creation to deletion.
-- From the teacher point of view, the tests... TODO
-
+- From the teacher point of view, the tests check if the main functionality of suggestion reviews is working: from creation to deletion.
 #### Commands defined
 
  - [commands.js](https://github.com/socialsoftware/quizzes-tutor/blob/master/frontend/tests/e2e/support/commands.js)
@@ -58,6 +63,11 @@ TODO: None?
   - [navigateSuggestions](https://github.com/tecnico-softeng/es20al_09-project/blob/PpA/frontend/tests/e2e/support/commands.js#L80)
   - [createSuggestion](https://github.com/tecnico-softeng/es20al_09-project/blob/PpA/frontend/tests/e2e/support/commands.js#L84)
   - [deleteSuggestion](https://github.com/tecnico-softeng/es20al_09-project/blob/PpA/frontend/tests/e2e/support/commands.js#L104)
+  - [demoTeacherLogin](https://github.com/tecnico-softeng/es20al_09-project/blob/PpA/frontend/tests/e2e/support/commands.js#L115)
+  - [navigateSuggestionsTeacher](https://github.com/tecnico-softeng/es20al_09-project/blob/PpA/frontend/tests/e2e/support/commands.js#L120)
+  - [navigateSuggestionReviews](https://github.com/tecnico-softeng/es20al_09-project/blob/PpA/frontend/tests/e2e/support/commands.js#L125)
+  - [createSuggestionReview](https://github.com/tecnico-softeng/es20al_09-project/blob/PpA/frontend/tests/e2e/support/commands.js#L130)
+  - [deleteSuggestionReview](https://github.com/tecnico-softeng/es20al_09-project/blob/PpA/frontend/tests/e2e/support/commands.js#L150)
 
 #### Screenshot of test results overview
 
