--- a/P3.md
+++ b/P3.md
@@ -71,7 +71,10 @@ TODO: None?
 
 #### Screenshot of test results overview
 
-TODO
+![image](https://user-images.githubusercontent.com/5447088/79687353-99e92c80-823e-11ea-9f3f-cf3287706650.png)
+
+![image](https://user-images.githubusercontent.com/5447088/79687367-aec5c000-823e-11ea-9d91-c6c1185f448d.png)
+
 
 ---
 
