Markdown file updated

--- a/P3.md
+++ b/P3.md
@@ -78,65 +78,83 @@ N/A
 
 ### Subgroup
 
- - Nome, istID, githubID
-   + Issues assigned: [#1](https://github.com), [#3](https://github.com)
- - Nome, istID, githubID
-   + Issues assigned: [#2](https://github.com), [#4](https://github.com)
+ - Isabel Soares, ist189466, isabelSoares
+   + Issues assigned: [#114](https://github.com/tecnico-softeng/es20al_09-project/issues/114), [#129](https://github.com/tecnico-softeng/es20al_09-project/issues/129), [#131](https://github.com/tecnico-softeng/es20al_09-project/issues/131), [#149](https://github.com/tecnico-softeng/es20al_09-project/issues/149), [#115](https://github.com/tecnico-softeng/es20al_09-project/issues/115), [#116](https://github.com/tecnico-softeng/es20al_09-project/issues/116)
+ - Rodrigo Sousa, ist189535, Sousa99
+   + Issues assigned: [#114](https://github.com/tecnico-softeng/es20al_09-project/issues/114), [#128](https://github.com/tecnico-softeng/es20al_09-project/issues/128), [#130](https://github.com/tecnico-softeng/es20al_09-project/issues/130), [#148](https://github.com/tecnico-softeng/es20al_09-project/issues/148), [#117](https://github.com/tecnico-softeng/es20al_09-project/issues/117), [#118](https://github.com/tecnico-softeng/es20al_09-project/issues/118)
 
 ### Pull requests associated with this feature
 
 The list of pull requests associated with this feature is:
 
- - [PR #000](https://github.com)
- - [PR #001](https://github.com)
- - [PR #002](https://github.com)
+ - [PR #150](https://github.com/tecnico-softeng/es20al_09-project/pull/150)
 
 
 ### Frontend
 
 #### New/Updated Views
 
- - [View0](https://github.com)
- - [View1](https://github.com)
+ - [CreateQueryDialog](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/src/views/student/query/CreateQueryDialog.vue)
+ - [EditQueryDialog](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/src/views/student/query/EditQueryDialog.vue)
+ - [QueryView](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/src/views/student/query/QueryView.vue)
+ - [SubmittedQueriesView](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/src/views/student/query/SubmittedQueriesView.vue)
+ - [ResultsView](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/src/views/student/quiz/ResultsView.vue)
+
+ - [CreateQueryAnswerDialog](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/src/views/teacher/query/CreateQueryAnswerDialog.vue)
+ - [EditQueryAnswerDialog](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/src/views/teacher/query/EditQueryDialog.vue)
+ - [QueryView](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/src/views/teacher/query/QueryView.vue)
+ - [SubmittedQueriesInCourseView](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/src/views/teacher/query/SubmittedQueriesInCourseView.vue)
 
 
 #### New/Updated Models
 
- - [Model0](https://github.com)
- - [Model1](https://github.com)
+ - [Query](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/src/models/management/Query.ts)
+ - [QueryAnswer](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/src/models/management/QueryAnswer.ts)
 
 ### Additional services implemented
 
- - [Service 0](https://github.com)
-    + [Controller](https://github.com)
-    + [Spock tests](https://github.com)
-    + [Feature test (JMeter)](https://github.com)
-
- - [Service 1](https://github.com)
-    + [Controller](https://github.com)
-    + [Spock tests](https://github.com)
-    + [Feature test (JMeter)](https://github.com)
-
+ - N/A
 
 ### End-to-end tests
 
 #### Created tests
 
- - [Login creates and deletes a course execution](https://github.com/socialsoftware/quizzes-tutor/blob/6dcf668498be3d6e45c84ebf61e81b931bdc797b/frontend/tests/e2e/specs/admin/manageCourseExecutions.js#L10)
- - [Login creates two course executions and deletes it](https://github.com/socialsoftware/quizzes-tutor/blob/6dcf668498be3d6e45c84ebf61e81b931bdc797b/frontend/tests/e2e/specs/admin/manageCourseExecutions.js#L16)
- - [Login creates FROM a course execution and deletes it](https://github.com/socialsoftware/quizzes-tutor/blob/6dcf668498be3d6e45c84ebf61e81b931bdc797b/frontend/tests/e2e/specs/admin/manageCourseExecutions.js#L30)
+ - [Login student creates and updates a query](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L8)
+ - [Login student invalid update a query](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L23)
+ - [Login teacher creates and updates a query answer](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L46)
+ - [Login teacher invalid update a query answer](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L60)
+ - [Login student visualizes an answer of a teacher](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L73)
+ - [Login student tries to delete a query](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L82)
+ - [Login teacher deletes a query answer](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L91)
+ - [Login student deletes a query](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/specs/manageQueries.js#L99)
 
 #### Rationale
-*TODO*: describe in 100 words (max) the relevance of the end-to-end tests defined with respect to the
-common use cases.
+The first use case that we decided to test was the creation of a query by a student. In this test we also check the capacity to update and remove a query.
+The second use case that we test is the capacity by a teacher to answer a query created by a student. For this second use case scenario test if the teacher is able to update and remove an answer.
+We also test the use case scenarios with invalid choices, such as invalid title, invalid content and trying to delete queries that have been answered.
 
 #### Commands defined
 
- - [commands.js](https://github.com/socialsoftware/quizzes-tutor/blob/master/frontend/tests/e2e/support/commands.js)
+ - [commands.js](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js)
+  - [demoTeacherLogin](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L80)
+  - [navigateQueriesStudents](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L133)
+  - [navigateQueriesTeachers](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L138)
+  - [navigateQuery](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L143)
+  - [verifyQuery](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L150)
+  - [createQuery](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L159)
+  - [editQuery](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L169)
+  - [appendQuery](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L184)
+  - [deleteQuery](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L197)
+  - [verifyQueryAnswer](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L203)
+  - [createQueryAnswer](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L210)
+  - [editQueryAnswer](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L218)
+  - [appendQueryAnswer](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L231)
+  - [deleteQueryAnswer](https://github.com/tecnico-softeng/es20al_09-project/blob/DdP/frontend/tests/e2e/support/commands.js#L243)
+ 
 
 #### Screenshot of test results overview
 
-![Test results](p3-images/cypress_results.png)
+![Test results](https://user-images.githubusercontent.com/33233238/79694927-928c4800-826b-11ea-8212-6ddb7e5c528f.jpg)
 
 ---
 
