--- a/P3.md
+++ b/P3.md
@@ -4,7 +4,7 @@
 
 ### Subgroup
 
-  - Daniel Pereira, 89425, DanielPereira890
+  - Henrique Dias, 89545, hacdias
     + Issues assigned: [#136](https://github.com/tecnico-softeng/es20al_09-project/issues/136), [#137](https://github.com/tecnico-softeng/es20al_09-project/issues/137), [#142](https://github.com/tecnico-softeng/es20al_09-project/issues/142), [#143](https://github.com/tecnico-softeng/es20al_09-project/issues/143)
   - Daniel Pereira, 89425, DanielPereira890
     + Issues assigned: [#138](https://github.com/tecnico-softeng/es20al_09-project/issues/138), [#139](https://github.com/tecnico-softeng/es20al_09-project/issues/139), [#140](https://github.com/tecnico-softeng/es20al_09-project/issues/140), [#141](https://github.com/tecnico-softeng/es20al_09-project/issues/141)
