--- a/P4.md
+++ b/P4.md
@@ -5,12 +5,31 @@
 ### Subgroup
 
  - Henrique Dias, 89455, hacdias
-   + Issues assigned: [#1](https://github.com), [#3](https://github.com)
-   + Tasks: F1:Service, F1:Spock Tests, etc
+   + Issues assigned: [#189], [#190], [#191], [#195], [#196], [#197], [#198], [#199], [#200]
+   + Tasks:
+      - F5:Service, F5:Spock Tests, F5:JMeter,
+      - F6:Service, F6:Spock,
+      - F7:Service, F7:Spock, F7:JMeter, F7:Cypress
  - Daniel Pereira, 89425, DanielPereira890
-   + Issues assigned: [#2](https://github.com), [#4](https://github.com)
-   + Tasks: F2:Service, F2:Spock Tests, etc
- 
+   + Issues assigned: [#189], [#190], [#192], [#193], [#194], [#195], [#196], [#197], [#198]
+   + Tasks:
+      - F5:Service, F5:Spock Tests, F5:Cypress,
+      - F6:Service, F6:Spock, F6:Cypress, F6:JMeter
+      - F7:JMeter, F7:Cypress
+
+[#189]: https://github.com/tecnico-softeng/es20al_09-project/issues/189
+[#190]: https://github.com/tecnico-softeng/es20al_09-project/issues/190
+[#191]: https://github.com/tecnico-softeng/es20al_09-project/issues/191
+[#192]: https://github.com/tecnico-softeng/es20al_09-project/issues/192
+[#193]: https://github.com/tecnico-softeng/es20al_09-project/issues/193
+[#194]: https://github.com/tecnico-softeng/es20al_09-project/issues/194
+[#195]: https://github.com/tecnico-softeng/es20al_09-project/issues/195
+[#196]: https://github.com/tecnico-softeng/es20al_09-project/issues/196
+[#197]: https://github.com/tecnico-softeng/es20al_09-project/issues/197
+[#198]: https://github.com/tecnico-softeng/es20al_09-project/issues/198
+[#199]: https://github.com/tecnico-softeng/es20al_09-project/issues/199
+[#200]: https://github.com/tecnico-softeng/es20al_09-project/issues/200
+
 ### Pull requests associated with this feature
 
 The list of pull requests associated with this feature is:
@@ -19,37 +38,50 @@ The list of pull requests associated with this feature is:
  - [PR #001](https://github.com)
  - [PR #002](https://github.com)
 
-
 ### Listed features
 
 Below, we list **only** the implemented features. For each feature, we link the relevant files and we mark which are requested parts are completed.
 
-#### Feature number 1: _Uma questão aprovada pode passar a fazer parte do conjunto de perguntas disponíveis_
+TODO: add JMETER AND CYPRESS SCREENSHOTS.
 
- - [x] [Service](https://github.com)
- - [x] [Spock tests](https://github.com)
- - [x] [JMeter feature tests](https://github.com)
-   + Screenshots:
-      
-     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p2-images/jmeter_create_1.png)
-     
- - [x] [Cypress use case test](https://github.com)
-   + Screenshot: 
-   
-     ![Test results](https://raw.githubusercontent.com/tecnico-softeng/templates/master/sprints/p3-images/cypress_results.png)
+#### Feature number 5: _Uma questão aprovada pode passar a fazer parte do conjunto de perguntas disponíveis_
 
-#### Feature number N: **TODO**
-
- - [x] [Service](https://github.com)
- - [x] [Spock tests](https://github.com)
+ - [ ] [Service](https://github.com)
+ - [ ] [Spock tests](https://github.com)
  - [ ] [JMeter feature test](https://github.com)
  - [ ] [Cypress use case test](https://github.com)
 
+#### Feature number 6: _Um docente pode alterar uma pergunta aprovada antes de a colocar como fazendo parte do conjunto de perguntas disponíveis_
+
+ - [ ] [Service](https://github.com)
+ - [ ] [Spock tests](https://github.com)
+ - [ ] [JMeter feature test](https://github.com)
+ - [ ] [Cypress use case test](https://github.com)
+
+#### Feature number 7: _Uma pergunta rejeitada pode ser alterada e resubmetida pelo aluno_
+
+ - [ ] [Service](https://github.com)
+ - [ ] [Spock tests](https://github.com)
+ - [ ] [JMeter feature test](https://github.com)
+ - [ ] [Cypress use case test](https://github.com)
+
+#### Feature number N: _Existe um dashboard do aluno onde é apresentada informação acerca do seu número de perguntas propostas e aprovadas_
+
+ - [ ] [Service](https://github.com)
+ - [ ] [Spock tests](https://github.com)
+ - [ ] [JMeter feature test](https://github.com)
+ - [ ] [Cypress use case test](https://github.com)
+
+#### Feature number N: _O aluno decide se esta informação no seu dashboard deve ser pública ou privada_
+
+ - [ ] [Service](https://github.com)
+ - [ ] [Spock tests](https://github.com)
+ - [ ] [JMeter feature test](https://github.com)
+ - [ ] [Cypress use case test](https://github.com)
 
 ### Additional features
 
-**TODO**: if you have implemented additional features, describe them here (following the same format as above).
-
+N/A
 
 ---
 
