--- a/P4.md
+++ b/P4.md
@@ -46,22 +46,22 @@ TODO: add JMETER AND CYPRESS SCREENSHOTS.
 
 #### Feature number 5: _Uma questão aprovada pode passar a fazer parte do conjunto de perguntas disponíveis_
 
- - [ ] [Service](https://github.com)
- - [ ] [Spock tests](https://github.com)
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/b334bb7b10f7831f3d7976fe8110c44e6f9bfbc2/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/suggestions/SuggestionReviewService.java#L55-L62) (see [#189] for complementary information)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/UpdateQuestionTest.groovy) (see [#190] for complementary information)
  - [ ] [JMeter feature test](https://github.com)
  - [ ] [Cypress use case test](https://github.com)
 
 #### Feature number 6: _Um docente pode alterar uma pergunta aprovada antes de a colocar como fazendo parte do conjunto de perguntas disponíveis_
 
- - [ ] [Service](https://github.com)
- - [ ] [Spock tests](https://github.com)
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/question/QuestionService.java) (see [#196] for complementary information)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/UpdateQuestionTest.groovy) (see [#195] for complementary information)
  - [ ] [JMeter feature test](https://github.com)
  - [ ] [Cypress use case test](https://github.com)
 
 #### Feature number 7: _Uma pergunta rejeitada pode ser alterada e resubmetida pelo aluno_
 
- - [ ] [Service](https://github.com)
- - [ ] [Spock tests](https://github.com)
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/suggestions/SuggestionService.java) (see [#197] for complementary information)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/suggestions/service/UpdateSuggestionTest.groovy) (see [#198] for complementary information)
  - [ ] [JMeter feature test](https://github.com)
  - [ ] [Cypress use case test](https://github.com)
 
