--- a/P4.md
+++ b/P4.md
@@ -5,17 +5,17 @@
 ### Subgroup
 
  - Henrique Dias, 89455, hacdias
-   + Issues assigned: [#189], [#190], [#191], [#195], [#196], [#197], [#198], [#199], [#200]
+   + Issues assigned: [#189], [#190], [#191], [#192], [#195], [#196], [#197], [#198], [#199]
    + Tasks:
-      - F5:Service, F5:Spock Tests, F5:JMeter,
+      - F5:Service, F5:Spock Tests, F5:Cypress, F5:JMeter
       - F6:Service, F6:Spock,
-      - F7:Service, F7:Spock, F7:JMeter, F7:Cypress
+      - F7:Service, F7:Spock, F7:JMeter
  - Daniel Pereira, 89425, DanielPereira890
-   + Issues assigned: [#189], [#190], [#192], [#193], [#194], [#195], [#196], [#197], [#198]
+   + Issues assigned: [#189], [#190], [#193], [#194], [#195], [#196], [#197], [#198], [#200]
    + Tasks:
-      - F5:Service, F5:Spock Tests, F5:Cypress,
+      - F5:Service, F5:Spock Tests,
       - F6:Service, F6:Spock, F6:Cypress, F6:JMeter
-      - F7:JMeter, F7:Cypress
+      - F7:Service, F7:Spock, F7:Cypress
 
 [#189]: https://github.com/tecnico-softeng/es20al_09-project/issues/189
 [#190]: https://github.com/tecnico-softeng/es20al_09-project/issues/190
