docs: add more info

--- a/P4.md
+++ b/P4.md
@@ -48,22 +48,22 @@ TODO: add JMETER AND CYPRESS SCREENSHOTS.
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/b334bb7b10f7831f3d7976fe8110c44e6f9bfbc2/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/suggestions/SuggestionReviewService.java#L55-L62) (see [#189] for complementary information)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/UpdateQuestionTest.groovy) (see [#190] for complementary information)
- - [ ] [JMeter feature test](https://github.com)
- - [ ] [Cypress use case test](https://github.com)
+ - [ ] [JMeter feature test](FIXME) (see [#191] for complementary information)
+ - [ ] [Cypress use case test](FIXME) (see [#192] for complementary information)
 
 #### Feature number 6: _Um docente pode alterar uma pergunta aprovada antes de a colocar como fazendo parte do conjunto de perguntas disponíveis_
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/question/QuestionService.java) (see [#196] for complementary information)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/UpdateQuestionTest.groovy) (see [#195] for complementary information)
- - [ ] [JMeter feature test](https://github.com)
- - [ ] [Cypress use case test](https://github.com)
+ - [ ] [JMeter feature test](FIXME) (see [#194] for complementary information)
+ - [ ] [Cypress use case test](FIXME) (see [#193] for complementary information)
 
 #### Feature number 7: _Uma pergunta rejeitada pode ser alterada e resubmetida pelo aluno_
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/suggestions/SuggestionService.java) (see [#197] for complementary information)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/suggestions/service/UpdateSuggestionTest.groovy) (see [#198] for complementary information)
- - [ ] [JMeter feature test](https://github.com)
- - [ ] [Cypress use case test](https://github.com)
+ - [ ] [JMeter feature test](FIXME) (see [#199] for complementary information)
+ - [ ] [Cypress use case test](FIXME) (see [#200] for complementary information)
 
 #### Feature number N: _Existe um dashboard do aluno onde é apresentada informação acerca do seu número de perguntas propostas e aprovadas_
 
