--- a/P4.md
+++ b/P4.md
@@ -5,11 +5,13 @@
 ### Subgroup
 
  - Henrique Dias, 89455, hacdias
-   + Issues assigned: [#189], [#190], [#191], [#192], [#195], [#196], [#197], [#198], [#199]
+   + Issues assigned: [#189], [#190], [#191], [#192], [#195], [#196], [#197], [#198], [#199], [#206], [#207], [#208], [#209]
    + Tasks:
       - F5:Service, F5:Spock Tests, F5:Cypress, F5:JMeter
       - F6:Service, F6:Spock,
       - F7:Service, F7:Spock, F7:JMeter
+      - F8:Service, F8:Spock, F8:JMeter, F8:Cypress
+      - F9:Service, F9:Spock, F9:JMeter, F9:Cypress
  - Daniel Pereira, 89425, DanielPereira890
    + Issues assigned: [#189], [#190], [#193], [#194], [#195], [#196], [#197], [#198], [#200]
    + Tasks:
@@ -65,7 +67,7 @@ TODO: add JMETER AND CYPRESS SCREENSHOTS.
  - [ ] [JMeter feature test](FIXME) (see [#199] for complementary information)
  - [ ] [Cypress use case test](FIXME) (see [#200] for complementary information)
 
-#### Feature number N: _Existe um dashboard do aluno onde é apresentada informação acerca do seu número de perguntas propostas e aprovadas_
+#### Feature number 8: _Existe um dashboard do aluno onde é apresentada informação acerca do seu número de perguntas propostas e aprovadas_
 
  - [ ] [Service](https://github.com)
  - [ ] [Spock tests](https://github.com)
