docs: add todos to P4

--- a/P4.md
+++ b/P4.md
@@ -5,19 +5,13 @@
 ### Subgroup
 
  - Henrique Dias, 89455, hacdias
-   + Issues assigned: [#189], [#190], [#191], [#192], [#195], [#196], [#197], [#198], [#199], [#206], [#207], [#208], [#209]
+   + Issues assigned: TODO
    + Tasks:
-      - F5:Service, F5:Spock Tests, F5:Cypress, F5:JMeter
-      - F6:Service, F6:Spock,
-      - F7:Service, F7:Spock, F7:JMeter
-      - F8:Service, F8:Spock, F8:JMeter, F8:Cypress
-      - F9:Service, F9:Spock, F9:JMeter, F9:Cypress
+      - F5:Service, F5:Spock Tests, TODO
  - Daniel Pereira, 89425, DanielPereira890
-   + Issues assigned: [#189], [#190], [#193], [#194], [#195], [#196], [#197], [#198], [#200]
+   + Issues assigned: TODO
    + Tasks:
-      - F5:Service, F5:Spock Tests,
-      - F6:Service, F6:Spock, F6:Cypress, F6:JMeter
-      - F7:Service, F7:Spock, F7:Cypress
+       - F5:Service, F5:Spock Tests, TODO
 
 [#189]: https://github.com/tecnico-softeng/es20al_09-project/issues/189
 [#190]: https://github.com/tecnico-softeng/es20al_09-project/issues/190
