--- a/P4.md
+++ b/P4.md
@@ -5,13 +5,18 @@
 ### Subgroup
 
  - Henrique Dias, 89455, hacdias
-   + Issues assigned: TODO
+   + Issues assigned: [#189], [#190], [#195], [#196], [#197], [#206], [#207], [#208], [#209]
    + Tasks:
-      - F5:Service, F5:Spock Tests, TODO
+      - F5:Service, F5:Spock
+      - F6:Service, F6:Spock
+      - F7:Service, F7:Spock
+      - F8:Service, F8:Spock, F8:JMeter, F8:Cypress
  - Daniel Pereira, 89425, DanielPereira890
-   + Issues assigned: TODO
+   + Issues assigned: [#189], [#190], [#195], [#196], [#198]
    + Tasks:
-       - F5:Service, F5:Spock Tests, TODO
+       - F5:Service, F5:Spock
+       - F6:Service, F6:Spock
+       - F7:Service, F7:Spock
 
 [#189]: https://github.com/tecnico-softeng/es20al_09-project/issues/189
 [#190]: https://github.com/tecnico-softeng/es20al_09-project/issues/190
@@ -25,6 +30,10 @@
 [#198]: https://github.com/tecnico-softeng/es20al_09-project/issues/198
 [#199]: https://github.com/tecnico-softeng/es20al_09-project/issues/199
 [#200]: https://github.com/tecnico-softeng/es20al_09-project/issues/200
+[#206]: https://github.com/tecnico-softeng/es20al_09-project/issues/206
+[#207]: https://github.com/tecnico-softeng/es20al_09-project/issues/207
+[#208]: https://github.com/tecnico-softeng/es20al_09-project/issues/208
+[#209]: https://github.com/tecnico-softeng/es20al_09-project/issues/209
 
 ### Pull requests associated with this feature
 
@@ -37,8 +46,6 @@ The list of pull requests associated with this feature is:
 ### Listed features
 
 Below, we list **only** the implemented features. For each feature, we link the relevant files and we mark which are requested parts are completed.
-
-TODO: add JMETER AND CYPRESS SCREENSHOTS.
 
 #### Feature number 5: _Uma questão aprovada pode passar a fazer parte do conjunto de perguntas disponíveis_
 
@@ -63,12 +70,14 @@ TODO: add JMETER AND CYPRESS SCREENSHOTS.
 
 #### Feature number 8: _Existe um dashboard do aluno onde é apresentada informação acerca do seu número de perguntas propostas e aprovadas_
 
- - [ ] [Service](https://github.com)
- - [ ] [Spock tests](https://github.com)
- - [ ] [JMeter feature test](https://github.com)
- - [ ] [Cypress use case test](https://github.com)
+ - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/99bb3784f6513fa6dedb15790805b3c357039858/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/statistics/StatsService.java#L91-L95)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/99bb3784f6513fa6dedb15790805b3c357039858/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/statistics/service/GetStatisticsTest.groovy#L78-L111)
+ - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_09-project/blob/c386e18ad304b649ca0621d5a797780bef7b1627/backend/jmeter/statistics/WSGetStudentStatistics.jmx)
+    - ![](https://user-images.githubusercontent.com/5447088/80864334-df175080-8c79-11ea-8164-ee5e40c28b91.png)
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/99bb3784f6513fa6dedb15790805b3c357039858/frontend/tests/e2e/specs/student/checkStatistics.js#L11-L19)
+    - ![](https://user-images.githubusercontent.com/5447088/80864336-e179aa80-8c79-11ea-80c5-12b12bb33b73.png)
 
-#### Feature number N: _O aluno decide se esta informação no seu dashboard deve ser pública ou privada_
+#### Feature number 9: _O aluno decide se esta informação no seu dashboard deve ser pública ou privada_
 
  - [ ] [Service](https://github.com)
  - [ ] [Spock tests](https://github.com)
