--- a/P4.md
+++ b/P4.md
@@ -5,18 +5,21 @@
 ### Subgroup
 
  - Henrique Dias, 89455, hacdias
-   + Issues assigned: [#189], [#190], [#195], [#196], [#197], [#206], [#207], [#208], [#209]
+   + Issues assigned: [#189], [#190], [#192], [#195], [#196], [#197], [#206], [#207], [#208], [#209], [#210], [#211], [#212], [#213]
    + Tasks:
-      - F5:Service, F5:Spock
+      - F5:Service, F5:Spock, F5:Cypress
       - F6:Service, F6:Spock
       - F7:Service, F7:Spock
       - F8:Service, F8:Spock, F8:JMeter, F8:Cypress
+      - F9:Service, F9:Spock, F9:JMeter, F9:Cypress
  - Daniel Pereira, 89425, DanielPereira890
-   + Issues assigned: [#189], [#190], [#195], [#196], [#198]
+   + Issues assigned: [#189], [#190], [#191], [#193], [#194], [#195], [#196], [#198], [#199], [#200]
    + Tasks:
-       - F5:Service, F5:Spock
-       - F6:Service, F6:Spock
-       - F7:Service, F7:Spock
+       - F5:Service, F5:Spock, F5:JMeter
+       - F6:Service, F6:Spock, F6:JMeter, F6:Cypress
+       - F7:Service, F7:Spock, F7:JMeter, F7:Cypress
+       
+**Note** that feature 8 and 9 require much less work than any of the others, hence only one student doing both.
 
 [#189]: https://github.com/tecnico-softeng/es20al_09-project/issues/189
 [#190]: https://github.com/tecnico-softeng/es20al_09-project/issues/190
@@ -34,6 +37,10 @@
 [#207]: https://github.com/tecnico-softeng/es20al_09-project/issues/207
 [#208]: https://github.com/tecnico-softeng/es20al_09-project/issues/208
 [#209]: https://github.com/tecnico-softeng/es20al_09-project/issues/209
+[#210]: https://github.com/tecnico-softeng/es20al_09-project/issues/210
+[#211]: https://github.com/tecnico-softeng/es20al_09-project/issues/211
+[#212]: https://github.com/tecnico-softeng/es20al_09-project/issues/212
+[#213]: https://github.com/tecnico-softeng/es20al_09-project/issues/213
 
 ### Pull requests associated with this feature
 
