--- a/P4.md
+++ b/P4.md
@@ -86,10 +86,12 @@ Below, we list **only** the implemented features. For each feature, we link the 
 
 #### Feature number 9: _O aluno decide se esta informação no seu dashboard deve ser pública ou privada_
 
- - [ ] [Service](https://github.com)
- - [ ] [Spock tests](https://github.com)
- - [ ] [JMeter feature test](https://github.com)
- - [ ] [Cypress use case test](https://github.com)
+ - [x] [Service (linked commit because it is not a service by itself)](https://github.com/tecnico-softeng/es20al_09-project/commit/792e080e3cad4a20c7f0827118794600703f731a)
+ - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/fd25326518cd422c22b4daf55f8cf5d005dc2b45/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/suggestions/service/ToggleStatsPrivacyTest.groovy)
+ - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_09-project/blob/0fbad505ef52eceb32b3f25a27b202a94dd72f66/backend/jmeter/suggestion/WSToggleStatisticsPrivacy.jmx)
+    - ![](https://user-images.githubusercontent.com/5447088/80865918-0bd06580-8c84-11ea-93b5-02ec17f165c2.png)
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/commit/cbf748dcba54c7ca5ebb940655bd2da878b8fe5a)
+    - ![](https://user-images.githubusercontent.com/5447088/80865915-0a9f3880-8c84-11ea-8927-a851d704fe51.png)
 
 ### Additional features
 
