--- a/P4.md
+++ b/P4.md
@@ -60,7 +60,8 @@ Below, we list **only** the implemented features. For each feature, we link the 
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/b334bb7b10f7831f3d7976fe8110c44e6f9bfbc2/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/suggestions/SuggestionReviewService.java#L55-L62) (see [#189] for complementary information)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/UpdateQuestionTest.groovy) (see [#190] for complementary information)
- - [ ] [JMeter feature test](FIXME) (see [#191] for complementary information)
+ - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/jmeter/suggestion/WSAddApprovedQuestionToAvailableQuestions.jmx) (see [#191] for complementary information)
+    - ![](https://user-images.githubusercontent.com/24615237/81289779-e1edb900-905e-11ea-8e8e-b3deec768d44.png)
  - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/0f4c19d1ef448fb794faea5539a44dc339a461c0/frontend/tests/e2e/specs/teacher/manageQuestions.js) (see [#192] for complementary information)
     - ![](https://user-images.githubusercontent.com/5447088/80866982-97002a00-8c89-11ea-9a2c-728d85b3c4dc.png)
 
@@ -68,15 +69,19 @@ Below, we list **only** the implemented features. For each feature, we link the 
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/question/QuestionService.java) (see [#196] for complementary information)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/question/service/UpdateQuestionTest.groovy) (see [#195] for complementary information)
- - [ ] [JMeter feature test](FIXME) (see [#194] for complementary information)
- - [ ] [Cypress use case test](FIXME) (see [#193] for complementary information)
+ - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/jmeter/suggestion/WSAlteringApprovedQuestions.jmx) (see [#194] for complementary information)
+    - ![](https://user-images.githubusercontent.com/24615237/81289790-e914c700-905e-11ea-95a1-0a4ad2466e85.png)
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/tests/e2e/specs/teacher/manageSuggestionReviews.js#L45) (see [#193] for complementary information)
+    - ![](https://user-images.githubusercontent.com/24615237/81289821-f03bd500-905e-11ea-8429-8fb07b1bad7f.png)
 
 #### Feature number 7: _Uma pergunta rejeitada pode ser alterada e resubmetida pelo aluno_
 
  - [x] [Service](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/main/java/pt/ulisboa/tecnico/socialsoftware/tutor/suggestions/SuggestionService.java) (see [#197] for complementary information)
  - [x] [Spock tests](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/src/test/groovy/pt/ulisboa/tecnico/socialsoftware/tutor/suggestions/service/UpdateSuggestionTest.groovy) (see [#198] for complementary information)
- - [ ] [JMeter feature test](FIXME) (see [#199] for complementary information)
- - [ ] [Cypress use case test](FIXME) (see [#200] for complementary information)
+ - [x] [JMeter feature test](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/backend/jmeter/suggestion/WSResubmitRejectedQuestion.jmx) (see [#199] for complementary information)
+    - ![](https://user-images.githubusercontent.com/24615237/81289810-ed40e480-905e-11ea-8ad0-ec2e85ffb0bc.png)
+ - [x] [Cypress use case test](https://github.com/tecnico-softeng/es20al_09-project/blob/develop/frontend/tests/e2e/specs/student/manageSuggestions.js#L77) (see [#200] for complementary information)
+    - ![](https://user-images.githubusercontent.com/24615237/81289837-f3cf5c00-905e-11ea-8789-191dfbb96abc.png)
 
 #### Feature number 8: _Existe um dashboard do aluno onde é apresentada informação acerca do seu número de perguntas propostas e aprovadas_
 
